--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-client": "(cd client/ && npm install && npm start)",
+    "start-server": "(cd server/ && npm install && npm start)"
   },
   "repository": {
     "type": "git",
